# ImgTag

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.en.md  README.md  alembic.ini  config.py  docker-compose.yml  logging_config.py  main.py  md.md  pg_vector_operations.py  pyproject.toml  requirements.txt  text_embedding.py  vector_search_example.py
.github/workflows/: auto-release.yml  docker-publish.yml
app/: __init__.py
app/api/: api_v1.py
app/api/endpoints/: __init__.py  images.py  search.py  system.py
app/core/: __init__.py  config.py  logging_config.py
app/db/: __init__.py  pg_vector.py
app/models/: image.py
app/services/: text_embedding.py
docker/: Dockerfile  docker-compose.yml  entrypoint.sh
docs/: EXTERNAL_API.md  README.md  architecture.md  database.md  external-api.md  frontend-deploy.md  permissions.md  project-structure.md  release-history.md  todo.md
docs/migrations/: v1.2.1_tag_id_shift.sql
docs/screenshots/: README.md
frontend/: vite.config.js
frontend/src/: App.vue  main.js
frontend/src/api/: index.js
frontend/src/assets/: main.css
frontend/src/components/: TagManager.vue
frontend/src/router/: index.js
frontend/src/stores/: app.js
frontend/src/views/: Dashboard.vue  Gallery.vue  Search.vue  (+3 more)
scripts/: test_db_init.py
sql/: create_tables.sql
src/imgtag/: __init__.py  main.py
web/: .env.example  README.zh.md  index.html  package.json  pnpm-lock.yaml  tsconfig.app.json  vercel.json  vite.config.ts
web/api/: config.js
web/public/: config.js
web/src/: App.vue  index.css  main.js  main.ts
(+173 files in other folders)
