[project]
name = "imgtag"
version = "2.0.0"
description = "图像标签与向量搜索系统 - 支持OpenAI标准视觉模型和嵌入模型"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "ImgTag Team" }
]

dependencies = [
    # Web 框架
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "python-multipart>=0.0.6",
    
    # 数据库
    "psycopg[binary,pool]>=3.1.0",
    
    # HTTP 客户端
    "httpx>=0.25.0",
    "aiofiles>=23.0.0",
    
    # OpenAI 兼容客户端
    "openai>=1.3.0",
    
    # 数据验证
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    
    # 工具
    "python-dotenv>=1.0.0",
    "pillow>=10.0.0",
    "numpy>=1.24.0",
    
    # 认证
    "pyjwt>=2.8.0",
]

[project.optional-dependencies]
# 本地嵌入模型 (可选，约700MB)
local = [
    "sentence-transformers>=2.2.0",
]

dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "httpx>=0.25.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/imgtag"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
